# nanopub-testsuite-connector-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  release.config.js  renovate.json
.github/workflows/: autorelease.yml  test.yml
src/nanopub_testsuite_connector/: __init__.py  connector.py  models.py
tests/: sample_trigs.py  test_connector.py
