[project]
name = "nanopub-testsuite-connector"
version = "1.0.0"
description = "Python connector for the Nanopublication Test Suite"
authors = [
    { name = "Ashley Caselli", email = "ashley@knowledgepixels.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["nanopublication", "testsuite", "linked-data", "rdf"]

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[project.urls]
Homepage = "https://github.com/Nanopublication/nanopub-testsuite-connector-py"
Repository = "https://github.com/Nanopublication/nanopub-testsuite-connector-py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
