[tool.poetry]
name = "nanopub-testsuite-connector"
version = "1.0.0"
description = "Python connector for the Nanopublication Test Suite"
authors = ["Ashley Caselli <ashley@knowledgepixels.com>"]
readme = "README.md"
license = "LICENSE"
keywords = ["nanopublication", "testsuite", "linked-data", "rdf"]
packages = [{ include = "nanopub_testsuite_connector", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[tool.poetry.urls]
Homepage = "https://github.com/Nanopublication/nanopub-testsuite-connector-py"
Repository = "https://github.com/Nanopublication/nanopub-testsuite-connector-py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
