[project]
name = "nanopub-testsuite-connector"
version = "1.0.0"
description = "Python connector for the Nanopublication Test Suite"
authors = [{ name = "Ashley Caselli", email = "ashley@knowledgepixels.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["nanopublication", "testsuite", "linked-data", "rdf"]
dependencies = [
    "rdflib>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/Nanopublication/nanopub-testsuite-connector-py"
Repository = "https://github.com/Nanopublication/nanopub-testsuite-connector-py"

[dependency-groups]
test = [
    "pytest>=9.0.2,<10.0.0"
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanopub_testsuite_connector"]
